# uwlinca

./: .gitignore  AUTHORS  ChangeLog  README.md  configure.ac
.github/scripts/: uwlinca-build.sh
.github/workflows/: uwlinca-ci.yml  uwlinca-ucvm-ci.yml
data/: Makefile.am  config  make_data_files.py
src/: Makefile.am  uwlinca.c  uwlinca.h
test/: Makefile.am  run_unit  test_api.c
test/.deps/: test_api.Po
tests/: Makefile.am  test_api.c
